native_math/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_record_string_f_64 {
  struct wire_cst_list_prim_u_8_strict *field0;
  double field1;
} wire_cst_record_string_f_64;
typedef struct wire_cst_list_record_string_f_64 {
  struct wire_cst_record_string_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_string_f_64;
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__evaluate_formula(struct wire_cst_list_prim_u_8_strict *formula,
                                                                      struct wire_cst_list_String *variables,
                                                                      struct wire_cst_list_prim_f_64_loose *values);
void frbgen_kivixa_wire__crate__api__evaluate_graph_points(int64_t port_,
                                                           struct wire_cst_list_prim_u_8_strict *expression,
                                                           struct wire_cst_list_prim_u_8_strict *variable,
                                                           struct wire_cst_list_prim_f_64_loose *x_values);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__factorial(uint64_t n);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__fibonacci(uint64_t n);
void frbgen_kivixa_wire__crate__api__find_extrema(int64_t port_,
                                                  struct wire_cst_list_prim_u_8_strict *expression,
                                                  struct wire_cst_list_prim_u_8_strict *variable,
                                                  double x_min,
                                                  double x_max,
                                                  uintptr_t num_samples);
void frbgen_kivixa_wire__crate__api__find_graph_roots(int64_t port_,
                                                      struct wire_cst_list_prim_u_8_strict *expression,
                                                      struct wire_cst_list_prim_u_8_strict *variable,
                                                      double x_min,
                                                      double x_max,
                                                      uintptr_t num_samples);
void frbgen_kivixa_wire__crate__api__find_roots_in_interval(int64_t port_,
                                                            struct wire_cst_list_prim_u_8_strict *expression,
                                                            struct wire_cst_list_prim_u_8_strict *variable,
                                                            double start,
                                                            double end,
                                                            uint32_t num_samples);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__gcd(uint64_t a, uint64_t b);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__generate_x_range(double start,
                                                                      double end,
                                                                      uintptr_t num_points);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__get_constant(struct wire_cst_list_prim_u_8_strict *name);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__get_unit_categories(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__get_units_for_category(struct wire_cst_list_prim_u_8_strict *category);
void frbgen_kivixa_wire__crate__api__gradient(int64_t port_,
                                              struct wire_cst_list_prim_u_8_strict *expression,
                                              struct wire_cst_list_String *variables,
                                              struct wire_cst_list_record_string_f_64 *point);
void frbgen_kivixa_wire__crate__api__init_app(int64_t port_);