lib/src/rust_math/frb_generated.io.dart


  WireSyncRust2DartDco wire__crate__api__evaluate_formula(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> formula,
    ffi.Pointer<wire_cst_list_String> variables,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> values,
  ) {
    return _wire__crate__api__evaluate_formula(formula, variables, values);
  }

  late final _wire__crate__api__evaluate_formulaPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_String>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__evaluate_formula');
  late final _wire__crate__api__evaluate_formula =
      _wire__crate__api__evaluate_formulaPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_String>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            )
          >();

  void wire__crate__api__evaluate_graph_points(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x_values,
  ) {
    return _wire__crate__api__evaluate_graph_points(
      port_,
      expression,
      variable,
      x_values,
    );
  }

  late final _wire__crate__api__evaluate_graph_pointsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__evaluate_graph_points');
  late final _wire__crate__api__evaluate_graph_points =
      _wire__crate__api__evaluate_graph_pointsPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__factorial(int n) {
    return _wire__crate__api__factorial(n);
  }

  late final _wire__crate__api__factorialPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__factorial',
      );
  late final _wire__crate__api__factorial = _wire__crate__api__factorialPtr
      .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__fibonacci(int n) {
    return _wire__crate__api__fibonacci(n);
  }

  late final _wire__crate__api__fibonacciPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__fibonacci',
      );
  late final _wire__crate__api__fibonacci = _wire__crate__api__fibonacciPtr
      .asFunction<WireSyncRust2DartDco Function(int)>();

  void wire__crate__api__find_extrema(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double x_min,
    double x_max,
    int num_samples,
  ) {
    return _wire__crate__api__find_extrema(
      port_,
      expression,
      variable,
      x_min,
      x_max,
      num_samples,
    );
  }

  late final _wire__crate__api__find_extremaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.UintPtr,
          )
        >
      >('frbgen_kivixa_wire__crate__api__find_extrema');
  late final _wire__crate__api__find_extrema =
      _wire__crate__api__find_extremaPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              int,
            )
          >();

  void wire__crate__api__find_graph_roots(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double x_min,
    double x_max,
    int num_samples,
  ) {
    return _wire__crate__api__find_graph_roots(
      port_,
      expression,
      variable,
      x_min,
      x_max,
      num_samples,
    );
  }

  late final _wire__crate__api__find_graph_rootsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.UintPtr,
          )
        >
      >('frbgen_kivixa_wire__crate__api__find_graph_roots');
  late final _wire__crate__api__find_graph_roots =
      _wire__crate__api__find_graph_rootsPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              int,
            )
          >();

  void wire__crate__api__find_roots_in_interval(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double start,
    double end,
    int num_samples,
  ) {
    return _wire__crate__api__find_roots_in_interval(
      port_,
      expression,
      variable,
      start,
      end,
      num_samples,
    );
  }

  late final _wire__crate__api__find_roots_in_intervalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__find_roots_in_interval');
  late final _wire__crate__api__find_roots_in_interval =
      _wire__crate__api__find_roots_in_intervalPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              int,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__gcd(int a, int b) {
    return _wire__crate__api__gcd(a, b);
  }

  late final _wire__crate__api__gcdPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__gcd');
  late final _wire__crate__api__gcd = _wire__crate__api__gcdPtr
      .asFunction<WireSyncRust2DartDco Function(int, int)>();

  WireSyncRust2DartDco wire__crate__api__generate_x_range(
    double start,
    double end,
    int num_points,
  ) {
    return _wire__crate__api__generate_x_range(start, end, num_points);
  }

  late final _wire__crate__api__generate_x_rangePtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Double, ffi.Double, ffi.UintPtr)
        >
      >('frbgen_kivixa_wire__crate__api__generate_x_range');
  late final _wire__crate__api__generate_x_range =
      _wire__crate__api__generate_x_rangePtr
          .asFunction<WireSyncRust2DartDco Function(double, double, int)>();

  WireSyncRust2DartDco wire__crate__api__get_constant(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> name,
  ) {
    return _wire__crate__api__get_constant(name);
  }

  late final _wire__crate__api__get_constantPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__get_constant');
  late final _wire__crate__api__get_constant =
      _wire__crate__api__get_constantPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__get_unit_categories() {
    return _wire__crate__api__get_unit_categories();
  }

  late final _wire__crate__api__get_unit_categoriesPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__get_unit_categories',
      );
  late final _wire__crate__api__get_unit_categories =
      _wire__crate__api__get_unit_categoriesPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__get_units_for_category(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> category,
  ) {
    return _wire__crate__api__get_units_for_category(category);
  }

  late final _wire__crate__api__get_units_for_categoryPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__get_units_for_category');
  late final _wire__crate__api__get_units_for_category =
      _wire__crate__api__get_units_for_categoryPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__gradient(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_String> variables,
    ffi.Pointer<wire_cst_list_record_string_f_64> point,
  ) {
    return _wire__crate__api__gradient(port_, expression, variables, point);
  }

  late final _wire__crate__api__gradientPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_String>,
            ffi.Pointer<wire_cst_list_record_string_f_64>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__gradient');
  late final _wire__crate__api__gradient = _wire__crate__api__gradientPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          ffi.Pointer<wire_cst_list_String>,
          ffi.Pointer<wire_cst_list_record_string_f_64>,
        )
      >();

  void wire__crate__api__init_app(int port_) {
    return _wire__crate__api__init_app(port_);
  }

  late final _wire__crate__api__init_appPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'frbgen_kivixa_wire__crate__api__init_app',
      );
  late final _wire__crate__api__init_app = _wire__crate__api__init_appPtr
      .asFunction<void Function(int)>();

  void wire__crate__api__integral_graph(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x_values,
    double initial_value,
  ) {
    return _wire__crate__api__integral_graph(
      port_,
      expression,
      variable,
      x_values,
      initial_value,
    );
  }
